added controller for role and user

--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
-
+# Database credentials
+DB_HOST="localhost"
+DB_DRIVER=mysql
+DB_USER="root"
+DB_PASSWORD="12345"
+DB_NAME="jwt_go_rbac"
+DB_PORT="3306"
 
 # # Default Admin User
-# ADMIN_USERNAME="<<ADMIN_USERNAME>>"
-# ADMIN_EMAIL="<<ADMIN_EMAIL>>"
-# ADMIN_PASSWORD="<<ADMIN_PASSWORD>>"
+ADMIN_USERNAME="chanchal"
+ADMIN_EMAIL="jiozindagichanchal@gmail.com"
+ADMIN_PASSWORD="12345"
 
 # # Authentication credentials
 # TOKEN_TTL="1800"
