--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ ADMIN_EMAIL="jiozindagichanchal@gmail.com"
 ADMIN_PASSWORD="12345"
 
 # # Authentication credentials
-# TOKEN_TTL="1800"
-# JWT_PRIVATE_KEY="<<JWT_KEY>>"
+TOKEN_TTL="1800"
+JWT_PRIVATE_KEY="ABC123ABC"
